--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,7 @@ jobs:
           - os: windows-latest
             artifact_name: qtctoys-windows
             asset_name: qtctoys-windows.zip
+            ext: .exe
 
     steps:
       - name: Checkout code
@@ -36,10 +37,26 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.24.2'
+          
+      - name: Initialize Go module
+        run: |
+          if [ ! -f "go.mod" ]; then
+            go mod init github.com/${{ github.repository }}
+          fi
+        shell: bash
+        if: matrix.os != 'windows-latest'
+        
+      - name: Initialize Go module (Windows)
+        run: |
+          if (-Not (Test-Path -Path "go.mod")) {
+            go mod init github.com/${{ github.repository }}
+          }
+        shell: pwsh
+        if: matrix.os == 'windows-latest'
 
       - name: Build
         run: |
-          go build -v -o ${{ matrix.artifact_name }} .
+          go build -v -o ${{ matrix.artifact_name }}${{ matrix.ext || '' }} .
         
       - name: Test
         run: go test -v ./...
@@ -51,7 +68,7 @@ jobs:
       - name: Create archive (Windows)
         if: matrix.os == 'windows-latest'
         run: |
-          7z a -tzip ${{ matrix.asset_name }} ${{ matrix.artifact_name }}.exe
+          7z a -tzip ${{ matrix.asset_name }} ${{ matrix.artifact_name }}${{ matrix.ext }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
